--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,14 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
+  - title: "People"
+    ulr: /people/
+    
+  - title: "Research"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Presentations"
     url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "CFEI in the News"
+    url: /media/
